--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,6 +1,7 @@
-
-footer{
+footer {
     background-image: url("../imagenes/flores-lilas.jpg");
+    opacity: 0.8;
+    background-repeat: no-repeat;
 }
 
 .footer {
@@ -17,33 +18,34 @@ footer{
         justify-content: center;
     }
 
-    &__link{
+    &__link {
         color: white;
-        &:hover{
+
+        &:hover {
             text-decoration: underline;
             font-size: 1.1rem;
         }
     }
 
     @include mq-desktop {
-            flex-direction: row;
-            justify-content: space-evenly;
-            align-content: center;
-            margin: auto;
-            max-width: 900px;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-content: center;
+        margin: auto;
+        max-width: 900px;
 
-            &__nav,
-            __redes {
-                display: flex;
-                flex-direction: column;
-                justify-content: start;
-                gap: 1rem;
-            }
+        &__nav,
+        __redes {
+            display: flex;
+            flex-direction: column;
+            justify-content: start;
+            gap: 1rem;
+        }
 
-            ul {
-                display: flex;
-                flex-direction: column;
-                gap: 0.5rem;
-            }
+        ul {
+            display: flex;
+            flex-direction: column;
+            gap: 0.5rem;
+        }
     }
 }
