--- a/sass/pages/_lugares.scss
+++ b/sass/pages/_lugares.scss
@@ -1,15 +1,16 @@
-.titulo-zona{
+.titulo-zona {
     text-align: center;
     margin-top: 4rem;
 }
 
-.zona{
+.zona {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 2rem;
+    padding: 1rem;
 
-    &__card{
+    &__card {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -21,32 +22,54 @@
         background-color: $color-titulo-card;
         border-radius: 20px;
         box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.285);
+
         &:hover {
             transform: scale(1.05);
             box-shadow: 10px 10px 5px 8px rgba(0, 0, 0, 0.425);
             background-color: rgb(201, 151, 248);
         }
     }
-    &__img{
+
+    &__img {
         border-radius: 50%;
         width: 100%;
         height: 100%;
         aspect-ratio: 1/1;
         object-fit: cover;
     }
-    &__titulo{
+
+    &__titulo {
         font-size: 1.5rem;
         color: $color-texto;
+        font-family: $font-titulo;
+        font-weight: 400;
     }
-    &__descripción{
+
+    &__descripción {
         font-size: 1rem;
     }
 
-    @include mq-desktop{
+    @include mq-tablet {
         flex-direction: row;
         gap: 2rem;
         overflow: auto;
-        &__card{
+        max-width: 550px;
+        margin: auto;
+
+        &__card {
+            flex-basis: 250px;
+            flex-shrink: 0;
+        }
+    }
+
+    @include mq-desktop {
+        flex-direction: row;
+        gap: 2rem;
+        overflow: auto;
+        max-width: 1140px;
+        margin: auto;
+
+        &__card {
             flex-basis: 250px;
             flex-shrink: 0;
         }
