--- a/sass/pages/_noticias.scss
+++ b/sass/pages/_noticias.scss
@@ -4,6 +4,7 @@
     max-width: 80vw;
     justify-content: center;
     margin: auto;
+
     &__tarjeta {
         display: flex;
         flex-direction: column;
@@ -13,22 +14,35 @@
         max-width: 80vw;
         border-radius: 50px;
         padding: 1rem;
+
         &:hover {
             transform: scale(1.03);
             box-shadow: 10px 10px 5px 8px rgba(0, 0, 0, 0.425);
             background-color: rgb(201, 151, 248);
         }
     }
+
     &__img {
         border-radius: 50px;
         padding: 1rem;
     }
+
     @include mq-desktop {
-        grid-template-columns: auto auto;
+        grid-template-columns: 2fr 6fr;
         grid-template-rows: auto auto;
+        max-width: 1100px;
+        margin: auto;
+
+        &__img {
+            max-width: 300px;
+            align-self: center;
+        }
+
         :nth-child(1) {
             grid-row: span 2;
-            font-size: 2rem;
+            font-size: 1rem;
+            font-family: $font-titulo;
+            font-weight: 400;
         }
     }
 }
@@ -38,10 +52,9 @@
     flex-direction: column;
     max-width: 85vw;
     gap: 1rem;
-    justify-content: center;
     margin: auto;
-    align-items: center;
     padding: 0.5rem;
+
     &__tarjeta {
         display: flex;
         flex-direction: column;
@@ -49,24 +62,34 @@
         padding: 1rem;
         border: 2px solid black;
         border-radius: 2rem;
-        margin: auto;
+        justify-content: stretch;
+
         &:hover {
             transform: scale(1.05);
             box-shadow: 10px 10px 10px 5px rgba(0, 0, 0, 0.425);
             background-color: rgb(217, 142, 244);
         }
     }
+
     &__titulo {
         padding: 0 1rem;
         color: $color-titulo-secciones;
+        font-family: $font-titulo;
+        font-weight: 400;
     }
+
     &__texto {
         padding: 0 1rem;
         font-size: 1rem;
         color: $color-texto;
+        font-family: $font-titulo;
+        font-weight: 400;
     }
+
     @include mq-desktop {
         flex-direction: row;
+        max-width: 1100px;
+        margin: auto;
 
         &__tarjeta {
             max-width: 400px;
