--- a/sass/pages/_productos.scss
+++ b/sass/pages/_productos.scss
@@ -18,7 +18,7 @@
     align-items: center;
     padding-top: 1rem;
     gap: 1rem;
-    // height: 500px;
+
     &__card {
         display: flex;
         flex-direction: column;
@@ -30,22 +30,46 @@
         padding: 2rem;
         background-color: $color-titulo-card;
         border-radius: 15px;
+        margin: 2rem 0;
+
         &:hover {
             transform: scale(1.02);
             box-shadow: 10px 10px 5px 8px rgba(0, 0, 0, 0.425);
             background-color: rgb(201, 151, 248);
         }
     }
+
     &__titulo {
         font-size: 1.5rem;
+        font-family: $font-titulo;
+        font-weight: 400;
     }
 
+    &__img {
+        border-radius: 50%;
+    }
+
+    @include mq-tablet {
+        flex-direction: row;
+        gap: 2rem;
+        overflow: auto;
+        margin: 1.5rem;
+        max-width: 550px;
+        margin: auto;
+
+        &__card {
+            flex-basis: 250px;
+            flex-shrink: 0;
+        }
+    }
 
     @include mq-desktop {
         flex-direction: row;
         gap: 2rem;
         overflow: auto;
         margin: 1.5rem;
+        max-width: 1100px;
+        margin: auto;
 
         &__card {
             flex-basis: 250px;
