Se agregan portadas, estilización de form, jerarquias y link en index a páginas

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,6 +1,12 @@
-footer .btn {
+.btn {
     border: 1px rgb(178, 8, 178) solid;
     background-color: violet;
     border-radius: 5px;
     padding: 5px;
+    &:hover{
+        transform: scale(1.03);
+        border: 1px rgb(184, 56, 184) solid;
+        background-color: rgb(235, 72, 235);
+
+    }
 }
