--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,8 @@
 @import "./components/footer";
 @import "./components/header";
 @import "./components/button";
+@import "./components/portada";
+@import "./components/form";
 
 @import "./pages/index";
 @import "./pages/informacion";
