--- a/css/styles.css
+++ b/css/styles.css
@@ -13,17 +13,6 @@ a {
   color: texto;
 }
 
-header a {
-  font-family: "Montserrat", sans-serif;
-  font-size: 2.5rem;
-}
-
-header a:hover {
-  background-color: rgb(227, 173, 246);
-  border-radius: 10px;
-  color: rgb(148, 0, 212);
-}
-
 ul,
 ol {
   list-style: none;
@@ -37,18 +26,7 @@ img {
 /* Estilización main */
 main {
   background-color: rgb(227, 173, 246);
-  padding: 1rem;
-}
-
-.titulo__pagina {
-  padding-top: 2rem;
-  color: rgb(102, 0, 149);
-  text-align: center;
-  padding-bottom: 1rem;
-  font-family: "Montserrat", sans-serif;
-  font-size: 3rem;
-  font-weight: 600;
-  margin-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .subtitulo__pagina {
@@ -63,13 +41,14 @@ main {
 }
 
 footer {
-  background-image: url("../imagenes/flores-lilas.jpg");
+  background-image: url("../imagenes/flores-lilas3.jpg");
   opacity: 0.8;
   background-repeat: no-repeat;
 }
 
 .footer {
   color: white;
+  font-size: 1.2rem;
   display: flex;
   flex-direction: column;
   padding: 1rem;
@@ -114,18 +93,86 @@ header {
   position: sticky;
   top: 0;
   z-index: 2;
-  background-color: rgb(252, 240, 255);
+  background-color: rgb(246, 214, 254);
 }
 
 header img {
   width: 150px;
 }
 
-footer .btn {
+.logo {
+  max-width: 5vw;
+  border-radius: 30%;
+}
+
+header a {
+  font-family: "Montserrat", sans-serif;
+  font-size: 2.5rem;
+}
+
+header a:hover {
+  background-color: rgb(227, 173, 246);
+  border-radius: 10px;
+  color: rgb(148, 0, 212);
+}
+
+.btn {
   border: 1px rgb(178, 8, 178) solid;
   background-color: violet;
   border-radius: 5px;
   padding: 5px;
+}
+.btn:hover {
+  transform: scale(1.03);
+  border: 1px rgb(184, 56, 184) solid;
+  background-color: rgb(235, 72, 235);
+}
+
+.portada {
+  display: flex;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  height: 60vh;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+.portada__titulo {
+  background-color: rgba(0, 0, 0, 0.5450980392);
+  border-radius: 15px;
+  padding: 5px 10px;
+  color: rgb(213, 139, 248);
+  font-family: "Montserrat", sans-serif;
+  font-size: 2.5rem;
+  font-weight: 600;
+}
+
+.portadainicio {
+  background-image: url("../../imagenes/portadainicio.jpeg");
+}
+
+.portadainformacion {
+  background-image: url("../../imagenes/portadainformacion.webp");
+}
+
+.portadaproductos {
+  background-image: url("../../imagenes/portadaproductos.webp");
+}
+
+.portadalugares {
+  background-image: url("../../imagenes/portadalugares.webp");
+}
+
+.portadanoticias {
+  background-image: url("../../imagenes/portadanoticias.webp");
+}
+
+.form {
+  border-radius: 15px;
+  padding: 3px 10px;
+  background-color: rgb(246, 214, 254);
+  border: 2rem black;
 }
 
 /* Página Inicio */
@@ -152,6 +199,7 @@ footer .btn {
   align-items: center;
   text-align: center;
   box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.285);
+  transition-duration: 1s;
 }
 .inicio__card:hover {
   transform: scale(1.05);
@@ -179,6 +227,8 @@ footer .btn {
   width: 70%;
   padding: 3rem;
   margin: 0 auto;
+  margin-top: 2rem;
+  box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.285);
 }
 .informacion1__titulo {
   font-size: 2rem;
@@ -212,6 +262,7 @@ footer .btn {
   border: 2px solid black;
   border-radius: 2rem;
   justify-content: stretch;
+  background-color: rgb(217, 142, 244);
 }
 .informacion__card:hover {
   box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.425);
@@ -220,9 +271,10 @@ footer .btn {
   font-size: 2rem;
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
+  text-decoration: underline;
 }
 .informacion__texto {
-  font-size: 1.5rem;
+  font-size: 1rem;
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
 }
@@ -239,7 +291,7 @@ footer .btn {
   }
 }
 
-.creadores {
+.creadores, .documentales, .activistas {
   display: flex;
   flex-direction: column;
   gap: 3rem;
@@ -248,7 +300,7 @@ footer .btn {
   max-width: 85vw;
   margin: auto;
 }
-.creadores__card {
+.creadores__card, .activistas__card {
   display: flex;
   flex-direction: column;
   padding: 1rem;
@@ -259,7 +311,7 @@ footer .btn {
   box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.425);
   justify-content: stretch;
 }
-.creadores__titulo, .activistas__link, .creadores__link {
+.creadores__titulo, .activistas__link, .activistas__titulo, .creadores__link {
   text-align: center;
   font-size: 1.3rem;
   font-family: "Montserrat", sans-serif;
@@ -271,6 +323,7 @@ footer .btn {
   aspect-ratio: 1/1;
   object-fit: cover;
   border-radius: 50%;
+  transition-duration: 1s;
 }
 .creadores__img:hover {
   transform: scale(1.05);
@@ -283,63 +336,40 @@ footer .btn {
   color: black;
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
+  text-decoration: underline;
 }
 @media (min-width: 768px) and (max-width: 1199px) {
-  .creadores {
+  .creadores, .documentales, .activistas {
     display: grid;
     grid-template-columns: auto auto;
     max-width: 800px;
     margin: auto;
     justify-items: center;
   }
-  .creadores__card {
+  .creadores__card, .activistas__card {
     max-width: 400px;
     justify-content: stretch;
   }
 }
 @media (min-width: 1200px) {
-  .creadores {
+  .creadores, .documentales, .activistas {
     display: flex;
     flex-direction: row;
     max-width: 1100px;
     margin: auto;
   }
-  .creadores__card {
+  .creadores__card, .activistas__card {
     max-width: 400px;
   }
 }
 
-.activistas {
-  display: flex;
-  flex-direction: column;
-  gap: 3rem;
-  margin-top: 2rem;
-  max-width: 85vw;
-  margin: auto;
-  align-items: center;
-}
-.activistas__card {
-  display: flex;
-  flex-direction: column;
-  padding: 1rem;
-  background-color: rgb(196, 132, 255);
-  border-radius: 15px;
-  width: 80%;
-  gap: 1rem;
-  box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.425);
-}
-.activistas__titulo {
-  text-align: center;
-  font-size: 1.3rem;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 400;
-}
 .activistas__img {
   width: 100%;
   height: 100%;
   aspect-ratio: 1/1;
   object-fit: cover;
   border-radius: 50%;
+  transition-duration: 1s;
 }
 .activistas__img:hover {
   transform: scale(1.05);
@@ -352,6 +382,7 @@ footer .btn {
   color: black;
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
+  text-decoration: underline;
 }
 @media (min-width: 768px) and (max-width: 1199px) {
   .activistas {
@@ -378,14 +409,6 @@ footer .btn {
   }
 }
 
-.documentales {
-  display: flex;
-  flex-direction: column;
-  gap: 3rem;
-  margin-top: 2rem;
-  margin: auto;
-  align-items: center;
-}
 .documentales__card {
   display: flex;
   flex-direction: column;
@@ -408,6 +431,7 @@ footer .btn {
   aspect-ratio: 1/1;
   object-fit: cover;
   border-radius: 50%;
+  transition-duration: 1s;
 }
 .documentales__img:hover {
   transform: scale(1.05);
@@ -464,6 +488,7 @@ footer .btn {
   background-color: rgb(196, 132, 255);
   border-radius: 20px;
   box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.285);
+  transition-duration: 1s;
 }
 .zona__card:hover {
   transform: scale(1.05);
@@ -529,6 +554,8 @@ footer .btn {
   max-width: 80vw;
   border-radius: 50px;
   padding: 1rem;
+  box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.285);
+  transition-duration: 1s;
 }
 .noticias__tarjeta:hover {
   transform: scale(1.03);
@@ -541,20 +568,24 @@ footer .btn {
 }
 @media (min-width: 1200px) {
   .noticias {
-    grid-template-columns: 2fr 6fr;
+    grid-template-columns: 2fr 8fr;
     grid-template-rows: auto auto;
     max-width: 1100px;
     margin: auto;
   }
   .noticias__img {
-    max-width: 300px;
     align-self: center;
+  }
+  .noticias__img2 {
+    height: 200px;
+    object-fit: contain;
+  }
+  .noticias__parrafo {
+    font-size: 1.5rem;
   }
   .noticias :nth-child(1) {
     grid-row: span 2;
-    font-size: 1rem;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 400;
+    min-width: 600px;
   }
 }
 
@@ -574,11 +605,13 @@ footer .btn {
   border: 2px solid black;
   border-radius: 2rem;
   justify-content: stretch;
+  background-color: rgb(217, 142, 244);
+  box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.285);
+  transition-duration: 1s;
 }
 .noticias2__tarjeta:hover {
   transform: scale(1.05);
   box-shadow: 10px 10px 10px 5px rgba(0, 0, 0, 0.425);
-  background-color: rgb(217, 142, 244);
 }
 .noticias2__titulo {
   padding: 0 1rem;
@@ -606,15 +639,17 @@ footer .btn {
 
 /* Página Productos */
 .formulario__productos form {
+  margin-top: 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  gap: 1rem;
+  gap: 2rem;
 }
 @media (min-width: 1200px) {
   .formulario__productos form {
-    justify-content: space-evenly;
+    justify-content: space-around;
+    flex-direction: row;
   }
 }
 
@@ -622,7 +657,6 @@ footer .btn {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 1rem;
   gap: 1rem;
 }
 .producto__card {
@@ -637,6 +671,8 @@ footer .btn {
   background-color: rgb(196, 132, 255);
   border-radius: 15px;
   margin: 2rem 0;
+  box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.285);
+  transition-duration: 1s;
 }
 .producto__card:hover {
   transform: scale(1.02);
@@ -671,7 +707,7 @@ footer .btn {
     gap: 2rem;
     overflow: auto;
     margin: 1.5rem;
-    max-width: 1100px;
+    max-width: 1120px;
     margin: auto;
   }
   .producto__card {
