--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,11 +1,12 @@
 footer {
-    background-image: url("../imagenes/flores-lilas.jpg");
+    background-image: url("../imagenes/flores-lilas3.jpg");
     opacity: 0.8;
     background-repeat: no-repeat;
 }
 
 .footer {
     color: white;
+    font-size: 1.2rem;
     display: flex;
     flex-direction: column;
     padding: 1rem;
