--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -2,9 +2,25 @@ header {
     position: sticky;
     top: 0;
     z-index: 2;
-    background-color: rgb(252, 240, 255);
+    background-color: rgb(246, 214, 254);
 }
 
 header img {
     width: 150px;
+}
+
+.logo{
+    max-width: 5vw;
+    border-radius: 30%;
+}
+
+header a {
+    font-family: $font-titulo;
+    font-size: 2.5rem;
+}
+
+header a:hover {
+    background-color: rgb(227, 173, 246);
+    border-radius: 10px;
+    color: rgb(148, 0, 212);
 }
