--- a/sass/pages/_lugares.scss
+++ b/sass/pages/_lugares.scss
@@ -22,6 +22,7 @@
         background-color: $color-titulo-card;
         border-radius: 20px;
         box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.285);
+        transition-duration: 1s;
 
         &:hover {
             transform: scale(1.05);
