--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-    background-image: url("../imagenes/flores-lilas3.jpg");
+    background-image: url("../imagenes/flores-lilas.jpg");
     opacity: 0.8;
     background-repeat: no-repeat;
 }
